VDB-6058: read_filter_redact can mask the reads with N

--- a/test/internal/read-filter-redact/CMakeLists.txt
+++ b/test/internal/read-filter-redact/CMakeLists.txt
@@ -42,23 +42,23 @@ sh -c "ls ${DIRTOTEST}/read-filter-redact${EXE}>/dev/null 2>&1 && ${Python3_EXEC
 	make_directory( ${CMAKE_CURRENT_SOURCE_DIR}/actual )
 
 	add_test( NAME Test_Read_filter_redact_1
-		COMMAND runtests.sh ${DIRTOTEST} read-filter-redact Test_Read_filter_redact_1
+		COMMAND test-history.sh ${DIRTOTEST} read-filter-redact Test_Read_filter_redact_1
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
     add_test( NAME Test_Read_filter_redact_2
-		COMMAND runtests.sh ${DIRTOTEST} read-filter-redact Test_Read_filter_redact_2
+		COMMAND test-history.sh ${DIRTOTEST} read-filter-redact Test_Read_filter_redact_2
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
     add_test( NAME Test_Read_filter_redact_3
-		COMMAND runtests.sh ${DIRTOTEST} read-filter-redact Test_Read_filter_redact_3
+		COMMAND test-history.sh ${DIRTOTEST} read-filter-redact Test_Read_filter_redact_3
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 
 	if( TARGET read-filter-redact-asan )
 		add_test( NAME Test_Read_filter_redact-asan
-			COMMAND runtests.sh ${DIRTOTEST} read-filter-redact-asan Test_Read_filter_redact_1
+			COMMAND test-history.sh ${DIRTOTEST} read-filter-redact-asan Test_Read_filter_redact_1
 			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 	endif()
 	if( TARGET read-filter-redact-tsan )
 		add_test( NAME Test_Read_filter_redact-tsan
-			COMMAND runtests.sh ${DIRTOTEST} read-filter-redact-tsan Test_Read_filter_redact_1
+			COMMAND test-history.sh ${DIRTOTEST} read-filter-redact-tsan Test_Read_filter_redact_1
 			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 	endif()
 
