--- a/tools/internal/CMakeLists.txt
+++ b/tools/internal/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory( md5cp )
 add_subdirectory( meta-cmp )
 add_subdirectory( meta-copy )
 add_subdirectory( meta-repair )
-add_subdirectory( rd-filter-redact )
+add_subdirectory( read-filter-redact )
 add_subdirectory( vdb-copy )
 add_subdirectory( vdb-diff )
 add_subdirectory( vdb-sql )
