--- a/tools/internal/read-filter-redact/CMakeLists.txt
+++ b/tools/internal/read-filter-redact/CMakeLists.txt
@@ -22,8 +22,16 @@
 #
 # ===========================================================================
 
-TOP ?= $(abspath ../../..)
-MODULE = tools/internal/rd-filter-redact
+if ( NOT WIN32 )
 
-BUILD_TOOLS_INTERNAL = ON
-include $(TOP)/build/Makefile.env
+    add_compile_definitions( __mod__="tools/internal/read-filter-redact" )
+
+    # Internal
+    GenerateExecutableWithDefs( test-rd-filter-values "test-read-write-cursor" "" "" "kapp;${COMMON_LINK_LIBRARIES};${COMMON_LIBS_WRITE}" )
+    MakeLinksExe( test-rd-filter-values false )
+
+    # External
+    GenerateExecutableWithDefs( read-filter-redact "read-filter-redact" "" "" "kapp;${COMMON_LINK_LIBRARIES};${COMMON_LIBS_WRITE}" )
+    MakeLinksExe( read-filter-redact false )
+
+endif()
