--- a/tools/internal/copycat/CMakeLists.txt
+++ b/tools/internal/copycat/CMakeLists.txt
@@ -48,6 +48,7 @@ if( ${OS} STREQUAL "linux" )
             ccsra
             ccsubchunk
             ccfile
+            cc-collect
             ../shared/teefile.c
             ${KFF_SRC}
         )
