--- a/tools/internal/copycat/CMakeLists.txt
+++ b/tools/internal/copycat/CMakeLists.txt
@@ -51,7 +51,7 @@ if( ${OS} STREQUAL "linux" )
             ../shared/teefile.c
             ${KFF_SRC}
         )
-        GenerateExecutableWithDefs( copycat "${SRC}" "" "${CMAKE_CURRENT_SOURCE_DIR}" "kapp;${COMMON_LINK_LIBRARIES};${COMMON_LIBS_READ};${HAVE_MAGIC}" "--no-asan" )
+        GenerateExecutableWithDefs( copycat "${SRC}" "" "${CMAKE_CURRENT_SOURCE_DIR}" "kapp;${COMMON_LINK_LIBRARIES};${COMMON_LIBS_READ};${HAVE_MAGIC}" )
         MakeLinksExe( copycat false )
 
     endif()
